[project]
name = "new-py"
version = "0.1.3"
description = "Python program to write new Python programs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
license = "BSD-3-Clause"
maintainers = [
  {name = "Ken Youens-Clark", email = "kyclark@gmail.com"}
]

[project.urls]
Repository = "https://github.com/kyclark/new.py"
Issues = "https://github.com/kyclark/new.py/issues"

[project.scripts]
"new.py" = "new_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
